description paragraphs overflow fix

--- a/website/src/pages/Services.css
+++ b/website/src/pages/Services.css
@@ -1,5 +1,6 @@
 .servicesGrid{
   width: 98%;
+  border: 1px solid blue;
 }
 
 .servicesCol {
@@ -17,7 +18,7 @@
 }
 
 .servicesColDescription {
-  font-size: 12px;
+  font-size: calc(0.5vw + 8px);
   margin-bottom: 25px;
   font-weight: lighter;
   line-height: 20px;
@@ -28,7 +29,8 @@
   font-size: 13px;
   font-style: italic;
   font-weight: lighter;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  border: 1px solid red;
 }
 
 .servicesRow {
@@ -44,7 +46,7 @@
   flex-direction: column;
 }
 
-.carouselDiv{
+/*.carouselDiv{
   width: 100%;
   background-color: #E3E0E0;
   height: 427px;
@@ -54,20 +56,19 @@
   border-top: 1px solid #C9C8C8;
   border-bottom: 1px solid #C9C8C8;
   margin-bottom: 20px;
-}
+  border: 10px solid red;
+}*/
 
 .carouselComponent {
   width: 96%;
   margin: 0 auto;
 }
 
-
-
-
 .pictureGrid{
   position: relative;
   margin-bottom: 20px;
   width:100%;
+  border:1px solid blue;
 }
 
 .leftArrow{
@@ -162,4 +163,200 @@
   position:absolute;
   top:0;
   background-color: white;
+}
+
+@media screen and (min-width: 768px) and (max-width:3000px){
+
+  .pictureGrid{
+    margin-top: calc(0.2vw + 5px);
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 767px){
+  .servicesCol{
+    width:100%;
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 8px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 9px);
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 10px);
+  }
+}
+
+@media screen and (min-width: 431px) and (max-width: 500px){
+  .servicesCol{
+    width:100%;
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 8px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 9px);
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 50px);
+  }
+}
+
+
+@media screen and (min-width:401px) and (max-width:430px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 85px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
+}
+
+@media screen and (min-width:358px) and (max-width:400px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 110px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
+}
+
+@media screen and (min-width:328px) and (max-width:357px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 130px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
+}
+
+@media screen and (min-width:308px) and (max-width:327px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 158px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
+}
+
+@media screen and (min-width:302px) and (max-width:307px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 175px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
+}
+
+@media screen and (min-width:292px) and (max-width:301px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 200px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
+}
+
+@media screen and (min-width:270px) and (max-width:291px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 225px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
+}
+
+@media screen and (min-width:0px) and (max-width:269px){
+
+  .servicesCol{
+    width:100%;
+  }
+
+  .pictureGrid{
+    margin-top: calc(0.5vw + 250px);
+  }
+
+  .servicesColDescription {
+    font-size: calc(0.5vw + 10px);
+  }
+
+  .servicesColBottomDescription {
+    font-size: calc(0.5vw + 11px);
+  }
 }
